# jobauto-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: ATS_SCORING.md  BUILD_WEEK_SCOPE.md  DEMO_RUNBOOK.md  DEMO_SCRIPT.md  DEVPOST_DESCRIPTION.md  DEVPOST_SUBMISSION.md  LEGAL_PROFILE_E2E_AUDIT.md  STUDIO_VISUAL_AUDIT.md
examples/demo-candidates/: camille-martin-cv.tex
src/jobauto/: __init__.py  adaptation_policy.py  application_service.py  artifact_naming.py  ats.py  build.py  candidate_context.py  candidate_draft.py  candidate_export.py  candidate_form_profile.py  candidate_pipeline.py  (+39 more)
tests/: test_adaptation_policy.py  test_application_service.py  test_ats.py  test_build.py  test_candidate_context.py  test_candidate_draft.py  test_candidate_export.py  test_candidate_snapshot.py  test_candidate_workflow.py  test_candidate_writers.py  test_codex_client.py  test_cross_domain_contracts.py  test_cv_change_summary.py  test_cv_layout.py  test_cv_source.py  test_demo_evidence.py  test_demo_profiles.py  test_discovery_handoff.py  test_document_patch.py  test_document_renderer.py  test_generic_vertical_slice.py  test_jobauto_plugin.py  test_latex_cv_source.py  test_multi_profile_studio_e2e.py  test_offer_contract.py  test_profile_extraction.py  test_project_lab_policy.py  test_public_validation.py  test_release_audit.py  test_run_store.py  test_search_preferences.py  test_source_preserving_cv.py  test_studio_campaign.py  test_submission_handoff.py  test_submission_preferences.py  test_tracker_io.py
(+103 files in other folders)
